# sc-scraping

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  parse_citizen_other.rs  parse_citizen_profile.rs  parse_org.rs  parse_web_bio.rs
